# tpc-rs

./: .travis.yml  CMakeLists.txt  README.md
StBichsel/: Bichsel.cxx  Bichsel.h  dEdxParameterization.cxx  dEdxParameterization.h
StChain/: StEvtHddr.cxx  StEvtHddr.h  StMaker.cxx  StMaker.h
StDbUtilities/: StCoordinates.hh  StFtpcLocalCoordinate.hh  StFtpcSectorCoordinate.hh  StGlobalCoordinate.cc  StGlobalCoordinate.hh  StGlobalDirection.cc  StGlobalDirection.hh  StMagUtilities.cxx  StMagUtilities.h  StSvtLocalCoordinate.hh  StSvtWaferCoordinate.hh  StTpcCoordinate.cxx  StTpcCoordinate.h  StTpcCoordinateTransform.cc  StTpcCoordinateTransform.hh  StTpcLocalCoordinate.hh  StTpcLocalDirection.hh  StTpcLocalSectorAlignedCoordinate.hh  StTpcLocalSectorAlignedDirection.hh  StTpcLocalSectorCoordinate.hh  StTpcLocalSectorDirection.hh  StTpcPadCoordinate.cc  StTpcPadCoordinate.hh
StDetectorDbMaker/: StDetectorDbChairs.cxx  StDetectorDbClock.h  StDetectorDbMagnet.h  StDetectorDbTpcRDOMasks.h  StTpcSurveyC.h  St_MDFCorrectionC.h  St_MagFactorC.h  St_SurveyC.h  St_TpcAdcCorrectionBC.h  St_TpcAdcCorrectionMDF.h  St_TpcAvgCurrentC.h  St_TpcAvgPowerSupplyC.h  St_TpcCurrentCorrectionC.h  St_TpcDriftDistOxygenC.h  St_TpcEdgeC.h  St_TpcEffectivedXC.h  St_TpcLengthCorrectionBC.h  St_TpcLengthCorrectionMDF.h  St_TpcMultiplicityC.h  St_TpcPadCorrectionMDF.h  St_TpcPhiDirectionC.h  St_TpcResponseSimulatorC.h  St_TpcRowQC.h  St_TpcSecRowBC.h  St_TpcSecRowCC.h  St_TpcSecRowCorC.h  St_TpcSpaceChargeC.h  St_TpcTanLC.h  St_TpcZCorrectionBC.h  St_TpcZDCC.h  St_TpcdChargeC.h  St_TpcdEdxCorC.h  St_TpcdXCorrectionBC.h  St_TpcrChargeC.h  St_asic_thresholdsC.h  St_iTPCSurveyC.h  St_itpcPadGainT0C.h  St_richvoltagesC.h  St_spaceChargeCorC.cxx  St_spaceChargeCorC.h  (+46 more)
StEvent/: StDedxDefinitions.h  StDetectorDefinitions.h  StEnumerations.h  StPidParticleDefinition.h  StTpcPixel.cxx  StTpcPixel.h  StTpcRawData.cxx  StTpcRawData.h  StTrackDefinitions.h  StTrackPidTraits.h  StVertexDefinitions.h
StMagF/: StMagF.h
StTpcDb/: StTpcDb.cxx  StTpcDb.h
StTpcRSMaker/: Altro.cxx  Altro.h  StTpcRSMaker.cxx  StTpcRSMaker.h  TF1F.cxx  TF1F.h  TpcRS.C
St_base/: StMessMgr.cxx  StMessMgr.h  StObject.cxx  StObject.h  StarCallf77.h  StarChairDefs.h  Stiostream.h  Stsstream.h  Stypes.h
St_db_Maker/: StValiSet.cxx  StValiSet.h  St_db_Maker.cxx  St_db_Maker.h
Star2Root/: StTypeDefs.h
StarClassLibrary/: PhysicalConstants.h  StAntiAlpha.cc  StAntiAlpha.hh  StAntiDMesonZero.cc  StAntiDeuteron.cc  StAntiHelium3.cc  StAntiHyperTriton.cc  StAntiHyperTriton.hh  StAntiKaonZero.cc  StAntiLambda1520.cc  StAntiLambdacPlus.cc  StAntiNeutrinoTau.cc  StAntiNeutron.cc  StAntiOmegaMinus.cc  StAntiProton.cc  StAntiSigmaMinus.cc  StAntiSigmaPlus.cc  StAntiSigmacPlusPlus.cc  StAntiTriton.cc  StAntiTriton.hh  StAntiXiMinus.cc  StAntiXiZero.cc  StAntiXicPlus.cc  StAntiXicZero.cc  StBMesonMinus.cc  StBMesonZero.cc  StBaryon.hh  StCerenkov.cc  StDStarMesonZero.cc  StDalitz.cc  StDeuteron.cc  StDsMesonMinus.cc  StDsMesonPlus.cc  StElectron.cc  StEtaPrime.cc  StGamma.cc  StGlobals.hh  StH0Strangelet.cc  StHDibaryon.cc  StHDibaryon.hh  (+57 more)
StarMagField/: StarMagField.cxx  StarMagField.h
StarRoot/: TRArray.cxx  TRArray.h  TRMatrix.cxx  TRMatrix.h  TRSymMatrix.cxx  TRSymMatrix.h  TRVector.cxx  TRVector.h  TUnixTime.cxx  TUnixTime.h
StdEdxY2Maker/: StTpcdEdxCorrection.cxx  StTpcdEdxCorrection.h
cmake/: ExternalProject_yaml-cpp.cmake  FindROOT.cmake
example/: CMakeLists.txt  arg_parser.h  simple.cpp
include/: LinkDef.h  MDFCorrection.h  MagFactor.h  Survey.h  TpcAvgCurrent.h  TpcAvgPowerSupply.h  TpcEffectivedX.h  TpcResponseSimulator.h  TpcSecRowCor.h  asic_thresholds.h  beamInfo.h  config_structs.h  config_yaml.h  g2t_tpc_hit.h  g2t_track.h  g2t_vertex.h  iTPCSurvey.h  itpcPadGainT0.h  richvoltages.h  spaceChargeCor.h  starClockOnl.h  starMagOnl.h  tpcAltroParams.h  tpcAnodeHV.h  tpcAnodeHVavg.h  tpcCalibResolutions.h  tpcChargeEvent.h  tpcCorrection.h  tpcDimensions.h  tpcDriftVelocity.h  tpcEffectiveGeom.h  tpcElectronics.h  tpcFieldCage.h  tpcFieldCageShort.h  tpcGas.h  tpcGlobalPosition.h  tpcGridLeak.h  tpcHVPlanes.h  tpcHighVoltages.h  tpcOmegaTau.h  (+17 more)
src/: CMakeLists.txt  Configurator.cpp  TF1F.cpp  TF1F.h  altro.cpp  altro.h  bichsel.cpp  bichsel.h  config.h.in  config_structs.h  config_yaml.h  configurator.cpp  coords.cpp  coords.h  dedx_correction.cpp  dedx_correction.h  dedx_parameterization.cpp  dedx_parameterization.h  digitizer.cpp  enums.h  logger.cpp  logger.h  mag_field.cpp  mag_field.h  mag_field_utils.cpp  mag_field_utils.h  mag_utilities.cpp  mag_utilities.h  math_cephes.cpp  math_cephes.h  math_funcs.cpp  math_funcs.h  simulator.cpp  simulator.h  struct_containers.cpp  struct_containers.h  tcl.h  tpc_db.cpp  tpc_db.h  tpcrs.cpp  (+4 more)
src/coords/: StCoordinates.hh  StGlobalCoordinate.cc  StGlobalCoordinate.hh  StGlobalDirection.cc  StGlobalDirection.hh  StTpcCoordinate.cxx  StTpcCoordinate.h  StTpcCoordinateTransform.cc  StTpcCoordinateTransform.hh  StTpcLocalCoordinate.hh  StTpcLocalDirection.hh  StTpcLocalSectorCoordinate.hh  StTpcLocalSectorDirection.hh  StTpcPadCoordinate.cc  StTpcPadCoordinate.hh
src/particles/: StAlpha.cc  StAntiAlpha.cc  StAntiAlpha.hh  StAntiBMesonZero.cc  StAntiBsMesonZero.cc  StAntiDStarMesonZero.cc  StAntiDeuteron.cc  StAntiDeuteron.hh  StAntiHelium3.cc  StAntiHelium3.hh  StAntiHyperTriton.cc  StAntiHyperTriton.hh  StAntiLambda.cc  StAntiNeutrinoE.cc  StAntiNeutrinoMu.cc  StAntiOmegacZero.cc  StAntiSigmaMinus1385.cc  StAntiSigmaPlus1385.cc  StAntiSigmaZero.cc  StAntiSigmacPlus.cc  StAntiSigmacZero.cc  StAntiTriton.cc  StAntiTriton.hh  StBMesonPlus.cc  StBaryon.hh  StBsMesonZero.cc  StDMesonMinus.cc  StDMesonPlus.cc  StDMesonZero.cc  StDStarMesonMinus.cc  StDStarMesonPlus.cc  StEta.cc  StGeantino.cc  StHDibaryon.cc  StHDibaryon.hh  StHe3.cc  StHelix.cc  StHelix.hh  StHyperTriton.cc  StHyperTriton.hh  (+29 more)
test/: CMakeLists.txt  GeantEvent.h  README.md  run_tests.sh  test_tpcrs.cpp
tests/: CMakeLists.txt  GeantEvent.h  LinkDef.h  README.md  run_tests.sh  test_tpcrs.cpp  test_tpcrs.cxx
(+291 files in other folders)
